--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 	<!-- HTML starts here -->
 	<h1>Discord relative timestamp generator</h1>
 
-	<p>Create a timestamp that automatically counts down the time!</p>
+	<p>Create a timestamp that automatically counts down the time.</p>
 	<img src="example.png" width=250>
-	<p>Every day, this little embed will countdown for you.</p><br>
+	<p>Every day, this little embed will countdown for you!</p><br>
 
-	<h2>Enter the countdown starting point:</h2>
+	<h2>Select your timeframe:</h2>
 
 	<div oncontextmenu="return false;"><!-- oncontextmenu="return false;" -->
 		<button id="weeks">0 weeks</button>
@@ -35,7 +35,7 @@
 	<p>Right click to subtract time (-2 days will convert to "2 days ago", for example)</p>
 
 	<h3>Copy and paste this into a discord message:</h3>
-	<p id=special>&lt;t:18274629387:R></p>
+	<p id=special>error generating timestamp</p>
 
 	<p>Curious how this works? <a href="https://www.youtube.com/watch?v=VADX8HEiqM0">Watch this video</a> or <a href="https://github.com/Dot32IsCool/discord-timestamp-generator">view the source code</a>.</p>
 	
